   for sequential calculations; for example for the local evaluation of the parallel nonlinear
   function required for SNES; see src/snes/examples/tutorials/ex5m.c. This functionality
   is accessed via the commands PetscMatlabEngineCreate(),Put(),Get(),Evaluate() and Destroy()
   It even imports the Matlab flop counts correctly. Obviously you need enough Matlab licenses
   for each node. Note: Matlab itself is not directly doing any parallel computing.

   In addition, augmented the SeqAIJ matrices to support -mat_aij_matlab that causes the 
   matrices to use the Matlab engine for sparse LU, and ILUDT factorization and solves. 
   Which have pivoting and thus are more robust than PETSc's default.

   I, of course, could do more, any suggestions?

   All include files like mat.h vec.h sles.h snes.h ts.h etc are now changed to petscmat.h petscvec.h
   petscsles.h petscsnes.h petscts.h

  added PetscSetHelpVersionFunctions() for developers of other libraries that use PETSc.

  added PetscPoUpSelect(), see src/sys/examples/tests/ex15.c

  added int PetscShowMemoryUsage(Viewer viewer,char *message)

  added PreLoadBegin(), PreLoadStage() and PreLoadEnd() to simplify getting
  accurate timings by peloading. See src/snes/examples/tutorials/ex10.c

  added PetscSynchronizedFGets()

  If you use PreLoadBegin() etc the preloaded stages will not be printed in the -log_summary output

  Viewers


 
  SNES 

  The second argument to MatSNESMFSetType() is now a MatSNESMFType, rather than
 a char*. This should not affect any user code. Current built in choices are
 MATSNESMF_DEFAULT "default" and MATSNESMF_WP "wp"

  SNESGetJacobian() now has an additional optional final argument that can return the function pointer

  SNESGetFunction() now has an additional optional final argument that can return the function pointer

  DA

  added -da_noao for DACreateXXX() makes them more scalable, but cannot use the natural numbering
  DA routines with this option.
    

  TS

   
